--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,47 @@
 body {
   margin:0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 13px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+hr {
+  border: solid 1px rgba(0,0,0,.09);
+}
+
+.card{
+  border: solid 1px rgba(0,0,0,.05);
+  box-shadow: 0px 0px 1px rgba(0,0,0,.05);
+}
+.card > .card-body{
+  padding:10px;
+}
+
+.form-input {
+  width:95%;
+  padding:5px;
+  border: solid 1px rgba(0,0,0,.05);
+  background: rgba(0,0,0,.02);
+}
+
+.button{
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.alert{
+  padding:10px;
+  border-radius: 5px;
+}
+.alert.alert-warning{
+  background: rgb(255, 188, 65);
+  color: #fff;
 }
